Made response level configurable (#51)

--- a/examples/docusaurus/mistral/docs/api/tag/batch/jobs.mdx
+++ b/examples/docusaurus/mistral/docs/api/tag/batch/jobs.mdx
@@ -4,7 +4,7 @@ sidebar_label: Batch Jobs
 ---
 
 import "@speakeasy-api/docs-md/docusaurus.css";
-import { Pill, Section, SectionTitle, SectionContent, Property, TabbedSection, SectionTab, ExpandableSection } from "@speakeasy-api/docs-md/docusaurus";
+import { Pill, TabbedSection, SectionTitle, SectionTab, SectionContent, Section, Property, ExpandableSection } from "@speakeasy-api/docs-md/docusaurus";
 
 
 # Batch Jobs Operations \{#batch/jobs\}
@@ -15,45 +15,11 @@ _Get Batch Jobs_
 
 Get a list of batch jobs for your organization and user.
 
-<Section>
-
-<SectionTitle slot="title" borderVariant="default" paddingVariant="default">
-
-### Security \{#operation-jobs_api_routes_batch_get_batch_jobs+security\}
-
-</SectionTitle>
-
-<SectionContent slot="content" borderVariant="default" paddingVariant="default">
-
-<Section>
-
-<SectionTitle slot="title" borderVariant="none" paddingVariant="default">
-
-#### Properties \{#operation-jobs_api_routes_batch_get_batch_jobs+security+properties\}
-
-</SectionTitle>
-
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
-
-<Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":[]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
-
-##### ApiKey \{#operation-jobs_api_routes_batch_get_batch_jobs+security+ApiKey\}
-
-</Property>
-
-</SectionContent>
-
-</Section>
-
-</SectionContent>
-
-</Section>
-
 <TabbedSection>
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="none">
 
-### Responses \{#operation-jobs_api_routes_batch_get_batch_jobs+responses\}
+### Response \{#operation-jobs_api_routes_batch_get_batch_jobs+responses\}
 
 </SectionTitle>
 
@@ -329,40 +295,6 @@ Create a new batch job, it will be queued for processing.
 
 <SectionTitle slot="title" borderVariant="default" paddingVariant="default">
 
-### Security \{#operation-jobs_api_routes_batch_create_batch_job+security\}
-
-</SectionTitle>
-
-<SectionContent slot="content" borderVariant="default" paddingVariant="default">
-
-<Section>
-
-<SectionTitle slot="title" borderVariant="none" paddingVariant="default">
-
-#### Properties \{#operation-jobs_api_routes_batch_create_batch_job+security+properties\}
-
-</SectionTitle>
-
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
-
-<Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":[]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
-
-##### ApiKey \{#operation-jobs_api_routes_batch_create_batch_job+security+ApiKey\}
-
-</Property>
-
-</SectionContent>
-
-</Section>
-
-</SectionContent>
-
-</Section>
-
-<Section>
-
-<SectionTitle slot="title" borderVariant="default" paddingVariant="default">
-
 ### Request Body \{#operation-jobs_api_routes_batch_create_batch_job+request\}
 
 </SectionTitle>
@@ -439,7 +371,7 @@ _Default Value:_ `24`
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="none">
 
-### Responses \{#operation-jobs_api_routes_batch_create_batch_job+responses\}
+### Response \{#operation-jobs_api_routes_batch_create_batch_job+responses\}
 
 </SectionTitle>
 
@@ -677,40 +609,6 @@ Get a batch job details by its UUID.
 
 <SectionTitle slot="title" borderVariant="default" paddingVariant="default">
 
-### Security \{#operation-jobs_api_routes_batch_get_batch_job+security\}
-
-</SectionTitle>
-
-<SectionContent slot="content" borderVariant="default" paddingVariant="default">
-
-<Section>
-
-<SectionTitle slot="title" borderVariant="none" paddingVariant="default">
-
-#### Properties \{#operation-jobs_api_routes_batch_get_batch_job+security+properties\}
-
-</SectionTitle>
-
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
-
-<Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":[]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
-
-##### ApiKey \{#operation-jobs_api_routes_batch_get_batch_job+security+ApiKey\}
-
-</Property>
-
-</SectionContent>
-
-</Section>
-
-</SectionContent>
-
-</Section>
-
-<Section>
-
-<SectionTitle slot="title" borderVariant="default" paddingVariant="default">
-
 ### Parameters \{#operation-jobs_api_routes_batch_get_batch_job+parameters\}
 
 </SectionTitle>
@@ -747,7 +645,7 @@ Get a batch job details by its UUID.
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="none">
 
-### Responses \{#operation-jobs_api_routes_batch_get_batch_job+responses\}
+### Response \{#operation-jobs_api_routes_batch_get_batch_job+responses\}
 
 </SectionTitle>
 
@@ -985,40 +883,6 @@ Request the cancellation of a batch job.
 
 <SectionTitle slot="title" borderVariant="default" paddingVariant="default">
 
-### Security \{#operation-jobs_api_routes_batch_cancel_batch_job+security\}
-
-</SectionTitle>
-
-<SectionContent slot="content" borderVariant="default" paddingVariant="default">
-
-<Section>
-
-<SectionTitle slot="title" borderVariant="none" paddingVariant="default">
-
-#### Properties \{#operation-jobs_api_routes_batch_cancel_batch_job+security+properties\}
-
-</SectionTitle>
-
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
-
-<Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":[]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
-
-##### ApiKey \{#operation-jobs_api_routes_batch_cancel_batch_job+security+ApiKey\}
-
-</Property>
-
-</SectionContent>
-
-</Section>
-
-</SectionContent>
-
-</Section>
-
-<Section>
-
-<SectionTitle slot="title" borderVariant="default" paddingVariant="default">
-
 ### Parameters \{#operation-jobs_api_routes_batch_cancel_batch_job+parameters\}
 
 </SectionTitle>
@@ -1055,7 +919,7 @@ Request the cancellation of a batch job.
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="none">
 
-### Responses \{#operation-jobs_api_routes_batch_cancel_batch_job+responses\}
+### Response \{#operation-jobs_api_routes_batch_cancel_batch_job+responses\}
 
 </SectionTitle>
 
