--- a/examples/docusaurus/mistral/docs/api/tag/fine-tuning/jobs.mdx
+++ b/examples/docusaurus/mistral/docs/api/tag/fine-tuning/jobs.mdx
@@ -4,7 +4,7 @@ sidebar_label: Fine Tuning Jobs
 ---
 
 import "@speakeasy-api/docs-md/docusaurus.css";
-import { Pill, Section, SectionTitle, SectionContent, Property, TabbedSection, SectionTab, ExpandableSection } from "@speakeasy-api/docs-md/docusaurus";
+import { Pill, TabbedSection, SectionTitle, SectionTab, SectionContent, Section, Property, ExpandableSection } from "@speakeasy-api/docs-md/docusaurus";
 
 
 # Fine Tuning Jobs Operations \{#fine-tuning/jobs\}
@@ -15,45 +15,11 @@ _Get Fine Tuning Jobs_
 
 Get a list of fine-tuning jobs for your organization and user.
 
-<Section>
-
-<SectionTitle slot="title" borderVariant="default" paddingVariant="default">
-
-### Security \{#operation-jobs_api_routes_fine_tuning_get_fine_tuning_jobs+security\}
-
-</SectionTitle>
-
-<SectionContent slot="content" borderVariant="default" paddingVariant="default">
-
-<Section>
-
-<SectionTitle slot="title" borderVariant="none" paddingVariant="default">
-
-#### Properties \{#operation-jobs_api_routes_fine_tuning_get_fine_tuning_jobs+security+properties\}
-
-</SectionTitle>
-
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
-
-<Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":[]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
-
-##### ApiKey \{#operation-jobs_api_routes_fine_tuning_get_fine_tuning_jobs+security+ApiKey\}
-
-</Property>
-
-</SectionContent>
-
-</Section>
-
-</SectionContent>
-
-</Section>
-
 <TabbedSection>
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="none">
 
-### Responses \{#operation-jobs_api_routes_fine_tuning_get_fine_tuning_jobs+responses\}
+### Response \{#operation-jobs_api_routes_fine_tuning_get_fine_tuning_jobs+responses\}
 
 </SectionTitle>
 
@@ -983,40 +949,6 @@ Create a new fine-tuning job, it will be queued for processing.
 
 <SectionTitle slot="title" borderVariant="default" paddingVariant="default">
 
-### Security \{#operation-jobs_api_routes_fine_tuning_create_fine_tuning_job+security\}
-
-</SectionTitle>
-
-<SectionContent slot="content" borderVariant="default" paddingVariant="default">
-
-<Section>
-
-<SectionTitle slot="title" borderVariant="none" paddingVariant="default">
-
-#### Properties \{#operation-jobs_api_routes_fine_tuning_create_fine_tuning_job+security+properties\}
-
-</SectionTitle>
-
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
-
-<Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":[]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
-
-##### ApiKey \{#operation-jobs_api_routes_fine_tuning_create_fine_tuning_job+security+ApiKey\}
-
-</Property>
-
-</SectionContent>
-
-</Section>
-
-</SectionContent>
-
-</Section>
-
-<Section>
-
-<SectionTitle slot="title" borderVariant="default" paddingVariant="default">
-
 ### Request Body \{#operation-jobs_api_routes_fine_tuning_create_fine_tuning_job+request\}
 
 </SectionTitle>
@@ -1511,7 +1443,7 @@ _Default Value:_ `1`
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="none">
 
-### Responses \{#operation-jobs_api_routes_fine_tuning_create_fine_tuning_job+responses\}
+### Response \{#operation-jobs_api_routes_fine_tuning_create_fine_tuning_job+responses\}
 
 </SectionTitle>
 
@@ -1561,40 +1493,6 @@ Get a fine-tuned job details by its UUID.
 
 <SectionTitle slot="title" borderVariant="default" paddingVariant="default">
 
-### Security \{#operation-jobs_api_routes_fine_tuning_get_fine_tuning_job+security\}
-
-</SectionTitle>
-
-<SectionContent slot="content" borderVariant="default" paddingVariant="default">
-
-<Section>
-
-<SectionTitle slot="title" borderVariant="none" paddingVariant="default">
-
-#### Properties \{#operation-jobs_api_routes_fine_tuning_get_fine_tuning_job+security+properties\}
-
-</SectionTitle>
-
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
-
-<Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":[]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
-
-##### ApiKey \{#operation-jobs_api_routes_fine_tuning_get_fine_tuning_job+security+ApiKey\}
-
-</Property>
-
-</SectionContent>
-
-</Section>
-
-</SectionContent>
-
-</Section>
-
-<Section>
-
-<SectionTitle slot="title" borderVariant="default" paddingVariant="default">
-
 ### Parameters \{#operation-jobs_api_routes_fine_tuning_get_fine_tuning_job+parameters\}
 
 </SectionTitle>
@@ -1635,7 +1533,7 @@ The ID of the job to analyse.
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="none">
 
-### Responses \{#operation-jobs_api_routes_fine_tuning_get_fine_tuning_job+responses\}
+### Response \{#operation-jobs_api_routes_fine_tuning_get_fine_tuning_job+responses\}
 
 </SectionTitle>
 
@@ -1685,40 +1583,6 @@ Request the cancellation of a fine tuning job.
 
 <SectionTitle slot="title" borderVariant="default" paddingVariant="default">
 
-### Security \{#operation-jobs_api_routes_fine_tuning_cancel_fine_tuning_job+security\}
-
-</SectionTitle>
-
-<SectionContent slot="content" borderVariant="default" paddingVariant="default">
-
-<Section>
-
-<SectionTitle slot="title" borderVariant="none" paddingVariant="default">
-
-#### Properties \{#operation-jobs_api_routes_fine_tuning_cancel_fine_tuning_job+security+properties\}
-
-</SectionTitle>
-
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
-
-<Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":[]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
-
-##### ApiKey \{#operation-jobs_api_routes_fine_tuning_cancel_fine_tuning_job+security+ApiKey\}
-
-</Property>
-
-</SectionContent>
-
-</Section>
-
-</SectionContent>
-
-</Section>
-
-<Section>
-
-<SectionTitle slot="title" borderVariant="default" paddingVariant="default">
-
 ### Parameters \{#operation-jobs_api_routes_fine_tuning_cancel_fine_tuning_job+parameters\}
 
 </SectionTitle>
@@ -1759,7 +1623,7 @@ The ID of the job to cancel.
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="none">
 
-### Responses \{#operation-jobs_api_routes_fine_tuning_cancel_fine_tuning_job+responses\}
+### Response \{#operation-jobs_api_routes_fine_tuning_cancel_fine_tuning_job+responses\}
 
 </SectionTitle>
 
@@ -1809,40 +1673,6 @@ Request the start of a validated fine tuning job.
 
 <SectionTitle slot="title" borderVariant="default" paddingVariant="default">
 
-### Security \{#operation-jobs_api_routes_fine_tuning_start_fine_tuning_job+security\}
-
-</SectionTitle>
-
-<SectionContent slot="content" borderVariant="default" paddingVariant="default">
-
-<Section>
-
-<SectionTitle slot="title" borderVariant="none" paddingVariant="default">
-
-#### Properties \{#operation-jobs_api_routes_fine_tuning_start_fine_tuning_job+security+properties\}
-
-</SectionTitle>
-
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
-
-<Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":[]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
-
-##### ApiKey \{#operation-jobs_api_routes_fine_tuning_start_fine_tuning_job+security+ApiKey\}
-
-</Property>
-
-</SectionContent>
-
-</Section>
-
-</SectionContent>
-
-</Section>
-
-<Section>
-
-<SectionTitle slot="title" borderVariant="default" paddingVariant="default">
-
 ### Parameters \{#operation-jobs_api_routes_fine_tuning_start_fine_tuning_job+parameters\}
 
 </SectionTitle>
@@ -1879,7 +1709,7 @@ Request the start of a validated fine tuning job.
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="none">
 
-### Responses \{#operation-jobs_api_routes_fine_tuning_start_fine_tuning_job+responses\}
+### Response \{#operation-jobs_api_routes_fine_tuning_start_fine_tuning_job+responses\}
 
 </SectionTitle>
 
