--- a/examples/docusaurus/mistral/docs/api/tag/models.mdx
+++ b/examples/docusaurus/mistral/docs/api/tag/models.mdx
@@ -4,7 +4,7 @@ sidebar_label: Models
 ---
 
 import "@speakeasy-api/docs-md/docusaurus.css";
-import { Pill, Section, SectionTitle, SectionContent, Property, TabbedSection, SectionTab, ExpandableSection } from "@speakeasy-api/docs-md/docusaurus";
+import { Pill, TabbedSection, SectionTitle, SectionTab, SectionContent, Section, Property, ExpandableSection } from "@speakeasy-api/docs-md/docusaurus";
 
 
 # Models Operations \{#models\}
@@ -14,40 +14,6 @@ import { Pill, Section, SectionTitle, SectionContent, Property, TabbedSection, S
 _List Models_
 
 List all models available to the user.
-
-<Section>
-
-<SectionTitle slot="title" borderVariant="default" paddingVariant="default">
-
-### Security \{#operation-list_models_v1_models_get+security\}
-
-</SectionTitle>
-
-<SectionContent slot="content" borderVariant="default" paddingVariant="default">
-
-<Section>
-
-<SectionTitle slot="title" borderVariant="none" paddingVariant="default">
-
-#### Properties \{#operation-list_models_v1_models_get+security+properties\}
-
-</SectionTitle>
-
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
-
-<Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":[]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
-
-##### ApiKey \{#operation-list_models_v1_models_get+security+ApiKey\}
-
-</Property>
-
-</SectionContent>
-
-</Section>
-
-</SectionContent>
-
-</Section>
 
 <TabbedSection>
 
@@ -641,40 +607,6 @@ Retrieve a model information.
 
 <SectionTitle slot="title" borderVariant="default" paddingVariant="default">
 
-### Security \{#operation-retrieve_model_v1_models_model_id_get+security\}
-
-</SectionTitle>
-
-<SectionContent slot="content" borderVariant="default" paddingVariant="default">
-
-<Section>
-
-<SectionTitle slot="title" borderVariant="none" paddingVariant="default">
-
-#### Properties \{#operation-retrieve_model_v1_models_model_id_get+security+properties\}
-
-</SectionTitle>
-
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
-
-<Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":[]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
-
-##### ApiKey \{#operation-retrieve_model_v1_models_model_id_get+security+ApiKey\}
-
-</Property>
-
-</SectionContent>
-
-</Section>
-
-</SectionContent>
-
-</Section>
-
-<Section>
-
-<SectionTitle slot="title" borderVariant="default" paddingVariant="default">
-
 ### Parameters \{#operation-retrieve_model_v1_models_model_id_get+parameters\}
 
 </SectionTitle>
@@ -860,40 +792,6 @@ Validation Error
 _Delete Model_
 
 Delete a fine-tuned model.
-
-<Section>
-
-<SectionTitle slot="title" borderVariant="default" paddingVariant="default">
-
-### Security \{#operation-delete_model_v1_models_model_id_delete+security\}
-
-</SectionTitle>
-
-<SectionContent slot="content" borderVariant="default" paddingVariant="default">
-
-<Section>
-
-<SectionTitle slot="title" borderVariant="none" paddingVariant="default">
-
-#### Properties \{#operation-delete_model_v1_models_model_id_delete+security+properties\}
-
-</SectionTitle>
-
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
-
-<Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":[]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
-
-##### ApiKey \{#operation-delete_model_v1_models_model_id_delete+security+ApiKey\}
-
-</Property>
-
-</SectionContent>
-
-</Section>
-
-</SectionContent>
-
-</Section>
 
 <Section>
 
@@ -1129,40 +1027,6 @@ Update a model name or description.
 
 <SectionTitle slot="title" borderVariant="default" paddingVariant="default">
 
-### Security \{#operation-jobs_api_routes_fine_tuning_update_fine_tuned_model+security\}
-
-</SectionTitle>
-
-<SectionContent slot="content" borderVariant="default" paddingVariant="default">
-
-<Section>
-
-<SectionTitle slot="title" borderVariant="none" paddingVariant="default">
-
-#### Properties \{#operation-jobs_api_routes_fine_tuning_update_fine_tuned_model+security+properties\}
-
-</SectionTitle>
-
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
-
-<Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":[]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
-
-##### ApiKey \{#operation-jobs_api_routes_fine_tuning_update_fine_tuned_model+security+ApiKey\}
-
-</Property>
-
-</SectionContent>
-
-</Section>
-
-</SectionContent>
-
-</Section>
-
-<Section>
-
-<SectionTitle slot="title" borderVariant="default" paddingVariant="default">
-
 ### Parameters \{#operation-jobs_api_routes_fine_tuning_update_fine_tuned_model+parameters\}
 
 </SectionTitle>
@@ -1253,7 +1117,7 @@ ft:open-mistral-7b:587a6b29:20240514:7e773925
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="none">
 
-### Responses \{#operation-jobs_api_routes_fine_tuning_update_fine_tuned_model+responses\}
+### Response \{#operation-jobs_api_routes_fine_tuning_update_fine_tuned_model+responses\}
 
 </SectionTitle>
 
@@ -1298,40 +1162,6 @@ OK
 _Archive Fine Tuned Model_
 
 Archive a fine-tuned model.
-
-<Section>
-
-<SectionTitle slot="title" borderVariant="default" paddingVariant="default">
-
-### Security \{#operation-jobs_api_routes_fine_tuning_archive_fine_tuned_model+security\}
-
-</SectionTitle>
-
-<SectionContent slot="content" borderVariant="default" paddingVariant="default">
-
-<Section>
-
-<SectionTitle slot="title" borderVariant="none" paddingVariant="default">
-
-#### Properties \{#operation-jobs_api_routes_fine_tuning_archive_fine_tuned_model+security+properties\}
-
-</SectionTitle>
-
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
-
-<Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":[]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
-
-##### ApiKey \{#operation-jobs_api_routes_fine_tuning_archive_fine_tuned_model+security+ApiKey\}
-
-</Property>
-
-</SectionContent>
-
-</Section>
-
-</SectionContent>
-
-</Section>
 
 <Section>
 
@@ -1383,7 +1213,7 @@ ft:open-mistral-7b:587a6b29:20240514:7e773925
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="none">
 
-### Responses \{#operation-jobs_api_routes_fine_tuning_archive_fine_tuned_model+responses\}
+### Response \{#operation-jobs_api_routes_fine_tuning_archive_fine_tuned_model+responses\}
 
 </SectionTitle>
 
@@ -1455,40 +1285,6 @@ Un-archive a fine-tuned model.
 
 <SectionTitle slot="title" borderVariant="default" paddingVariant="default">
 
-### Security \{#operation-jobs_api_routes_fine_tuning_unarchive_fine_tuned_model+security\}
-
-</SectionTitle>
-
-<SectionContent slot="content" borderVariant="default" paddingVariant="default">
-
-<Section>
-
-<SectionTitle slot="title" borderVariant="none" paddingVariant="default">
-
-#### Properties \{#operation-jobs_api_routes_fine_tuning_unarchive_fine_tuned_model+security+properties\}
-
-</SectionTitle>
-
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
-
-<Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":[]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
-
-##### ApiKey \{#operation-jobs_api_routes_fine_tuning_unarchive_fine_tuned_model+security+ApiKey\}
-
-</Property>
-
-</SectionContent>
-
-</Section>
-
-</SectionContent>
-
-</Section>
-
-<Section>
-
-<SectionTitle slot="title" borderVariant="default" paddingVariant="default">
-
 ### Parameters \{#operation-jobs_api_routes_fine_tuning_unarchive_fine_tuned_model+parameters\}
 
 </SectionTitle>
@@ -1535,7 +1331,7 @@ ft:open-mistral-7b:587a6b29:20240514:7e773925
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="none">
 
-### Responses \{#operation-jobs_api_routes_fine_tuning_unarchive_fine_tuned_model+responses\}
+### Response \{#operation-jobs_api_routes_fine_tuning_unarchive_fine_tuned_model+responses\}
 
 </SectionTitle>
 
