--- a/examples/nextra/mistral/src/app/api/tag/fine-tuning/jobs/page.mdx
+++ b/examples/nextra/mistral/src/app/api/tag/fine-tuning/jobs/page.mdx
@@ -2,8 +2,8 @@
 sidebarTitle: Fine Tuning Jobs
 ---
 
-import { Pill, Section, SectionTitle, SectionContent, Property, TabbedSection, SectionTab, ExpandableSection } from "@speakeasy-api/docs-md/nextra";
 import "@speakeasy-api/docs-md/nextra.css";
+import { Pill, TabbedSection, SectionTitle, SectionTab, SectionContent, Section, Property, ExpandableSection } from "@speakeasy-api/docs-md/nextra";
 
 
 # Fine Tuning Jobs Operations [#fine-tuning/jobs]
@@ -14,45 +14,11 @@ _Get Fine Tuning Jobs_
 
 Get a list of fine-tuning jobs for your organization and user.
 
-<Section>
-
-<SectionTitle slot="title" borderVariant="default" paddingVariant="default">
-
-### Security [#operation-jobs_api_routes_fine_tuning_get_fine_tuning_jobs+security]
-
-</SectionTitle>
-
-<SectionContent slot="content" borderVariant="default" paddingVariant="default">
-
-<Section>
-
-<SectionTitle slot="title" borderVariant="none" paddingVariant="default">
-
-#### Properties [#operation-jobs_api_routes_fine_tuning_get_fine_tuning_jobs+security+properties]
-
-</SectionTitle>
-
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
-
-<Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":[]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
-
-##### ApiKey [#operation-jobs_api_routes_fine_tuning_get_fine_tuning_jobs+security+ApiKey]
-
-</Property>
-
-</SectionContent>
-
-</Section>
-
-</SectionContent>
-
-</Section>
-
 <TabbedSection>
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="none">
 
-### Responses [#operation-jobs_api_routes_fine_tuning_get_fine_tuning_jobs+responses]
+### Response [#operation-jobs_api_routes_fine_tuning_get_fine_tuning_jobs+responses]
 
 </SectionTitle>
 
@@ -982,40 +948,6 @@ Create a new fine-tuning job, it will be queued for processing.
 
 <SectionTitle slot="title" borderVariant="default" paddingVariant="default">
 
-### Security [#operation-jobs_api_routes_fine_tuning_create_fine_tuning_job+security]
-
-</SectionTitle>
-
-<SectionContent slot="content" borderVariant="default" paddingVariant="default">
-
-<Section>
-
-<SectionTitle slot="title" borderVariant="none" paddingVariant="default">
-
-#### Properties [#operation-jobs_api_routes_fine_tuning_create_fine_tuning_job+security+properties]
-
-</SectionTitle>
-
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
-
-<Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":[]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
-
-##### ApiKey [#operation-jobs_api_routes_fine_tuning_create_fine_tuning_job+security+ApiKey]
-
-</Property>
-
-</SectionContent>
-
-</Section>
-
-</SectionContent>
-
-</Section>
-
-<Section>
-
-<SectionTitle slot="title" borderVariant="default" paddingVariant="default">
-
 ### Request Body [#operation-jobs_api_routes_fine_tuning_create_fine_tuning_job+request]
 
 </SectionTitle>
@@ -1510,7 +1442,7 @@ _Default Value:_ `1`
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="none">
 
-### Responses [#operation-jobs_api_routes_fine_tuning_create_fine_tuning_job+responses]
+### Response [#operation-jobs_api_routes_fine_tuning_create_fine_tuning_job+responses]
 
 </SectionTitle>
 
@@ -1560,40 +1492,6 @@ Get a fine-tuned job details by its UUID.
 
 <SectionTitle slot="title" borderVariant="default" paddingVariant="default">
 
-### Security [#operation-jobs_api_routes_fine_tuning_get_fine_tuning_job+security]
-
-</SectionTitle>
-
-<SectionContent slot="content" borderVariant="default" paddingVariant="default">
-
-<Section>
-
-<SectionTitle slot="title" borderVariant="none" paddingVariant="default">
-
-#### Properties [#operation-jobs_api_routes_fine_tuning_get_fine_tuning_job+security+properties]
-
-</SectionTitle>
-
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
-
-<Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":[]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
-
-##### ApiKey [#operation-jobs_api_routes_fine_tuning_get_fine_tuning_job+security+ApiKey]
-
-</Property>
-
-</SectionContent>
-
-</Section>
-
-</SectionContent>
-
-</Section>
-
-<Section>
-
-<SectionTitle slot="title" borderVariant="default" paddingVariant="default">
-
 ### Parameters [#operation-jobs_api_routes_fine_tuning_get_fine_tuning_job+parameters]
 
 </SectionTitle>
@@ -1634,7 +1532,7 @@ The ID of the job to analyse.
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="none">
 
-### Responses [#operation-jobs_api_routes_fine_tuning_get_fine_tuning_job+responses]
+### Response [#operation-jobs_api_routes_fine_tuning_get_fine_tuning_job+responses]
 
 </SectionTitle>
 
@@ -1684,40 +1582,6 @@ Request the cancellation of a fine tuning job.
 
 <SectionTitle slot="title" borderVariant="default" paddingVariant="default">
 
-### Security [#operation-jobs_api_routes_fine_tuning_cancel_fine_tuning_job+security]
-
-</SectionTitle>
-
-<SectionContent slot="content" borderVariant="default" paddingVariant="default">
-
-<Section>
-
-<SectionTitle slot="title" borderVariant="none" paddingVariant="default">
-
-#### Properties [#operation-jobs_api_routes_fine_tuning_cancel_fine_tuning_job+security+properties]
-
-</SectionTitle>
-
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
-
-<Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":[]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
-
-##### ApiKey [#operation-jobs_api_routes_fine_tuning_cancel_fine_tuning_job+security+ApiKey]
-
-</Property>
-
-</SectionContent>
-
-</Section>
-
-</SectionContent>
-
-</Section>
-
-<Section>
-
-<SectionTitle slot="title" borderVariant="default" paddingVariant="default">
-
 ### Parameters [#operation-jobs_api_routes_fine_tuning_cancel_fine_tuning_job+parameters]
 
 </SectionTitle>
@@ -1758,7 +1622,7 @@ The ID of the job to cancel.
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="none">
 
-### Responses [#operation-jobs_api_routes_fine_tuning_cancel_fine_tuning_job+responses]
+### Response [#operation-jobs_api_routes_fine_tuning_cancel_fine_tuning_job+responses]
 
 </SectionTitle>
 
@@ -1808,40 +1672,6 @@ Request the start of a validated fine tuning job.
 
 <SectionTitle slot="title" borderVariant="default" paddingVariant="default">
 
-### Security [#operation-jobs_api_routes_fine_tuning_start_fine_tuning_job+security]
-
-</SectionTitle>
-
-<SectionContent slot="content" borderVariant="default" paddingVariant="default">
-
-<Section>
-
-<SectionTitle slot="title" borderVariant="none" paddingVariant="default">
-
-#### Properties [#operation-jobs_api_routes_fine_tuning_start_fine_tuning_job+security+properties]
-
-</SectionTitle>
-
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
-
-<Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":[]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
-
-##### ApiKey [#operation-jobs_api_routes_fine_tuning_start_fine_tuning_job+security+ApiKey]
-
-</Property>
-
-</SectionContent>
-
-</Section>
-
-</SectionContent>
-
-</Section>
-
-<Section>
-
-<SectionTitle slot="title" borderVariant="default" paddingVariant="default">
-
 ### Parameters [#operation-jobs_api_routes_fine_tuning_start_fine_tuning_job+parameters]
 
 </SectionTitle>
@@ -1878,7 +1708,7 @@ Request the start of a validated fine tuning job.
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="none">
 
-### Responses [#operation-jobs_api_routes_fine_tuning_start_fine_tuning_job+responses]
+### Response [#operation-jobs_api_routes_fine_tuning_start_fine_tuning_job+responses]
 
 </SectionTitle>
 
