--- a/examples/docusaurus/mistral/docs/api/tag/files.mdx
+++ b/examples/docusaurus/mistral/docs/api/tag/files.mdx
@@ -4,7 +4,7 @@ sidebar_label: Files
 ---
 
 import "@speakeasy-api/docs-md/docusaurus.css";
-import { Pill, Section, SectionTitle, SectionContent, Property, TabbedSection, SectionTab, ExpandableSection } from "@speakeasy-api/docs-md/docusaurus";
+import { Pill, TabbedSection, SectionTitle, SectionTab, SectionContent, Section, Property, ExpandableSection } from "@speakeasy-api/docs-md/docusaurus";
 
 
 # Files Operations \{#files\}
@@ -15,45 +15,11 @@ _List Files_
 
 Returns a list of files that belong to the user's organization.
 
-<Section>
-
-<SectionTitle slot="title" borderVariant="default" paddingVariant="default">
-
-### Security \{#operation-files_api_routes_list_files+security\}
-
-</SectionTitle>
-
-<SectionContent slot="content" borderVariant="default" paddingVariant="default">
-
-<Section>
-
-<SectionTitle slot="title" borderVariant="none" paddingVariant="default">
-
-#### Properties \{#operation-files_api_routes_list_files+security+properties\}
-
-</SectionTitle>
-
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
-
-<Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":[]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
-
-##### ApiKey \{#operation-files_api_routes_list_files+security+ApiKey\}
-
-</Property>
-
-</SectionContent>
-
-</Section>
-
-</SectionContent>
-
-</Section>
-
 <TabbedSection>
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="none">
 
-### Responses \{#operation-files_api_routes_list_files+responses\}
+### Response \{#operation-files_api_routes_list_files+responses\}
 
 </SectionTitle>
 
@@ -261,40 +227,6 @@ Please contact us if you need to increase these storage limits.
 
 <SectionTitle slot="title" borderVariant="default" paddingVariant="default">
 
-### Security \{#operation-files_api_routes_upload_file+security\}
-
-</SectionTitle>
-
-<SectionContent slot="content" borderVariant="default" paddingVariant="default">
-
-<Section>
-
-<SectionTitle slot="title" borderVariant="none" paddingVariant="default">
-
-#### Properties \{#operation-files_api_routes_upload_file+security+properties\}
-
-</SectionTitle>
-
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
-
-<Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":[]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
-
-##### ApiKey \{#operation-files_api_routes_upload_file+security+ApiKey\}
-
-</Property>
-
-</SectionContent>
-
-</Section>
-
-</SectionContent>
-
-</Section>
-
-<Section>
-
-<SectionTitle slot="title" borderVariant="default" paddingVariant="default">
-
 ### Request Body \{#operation-files_api_routes_upload_file+request\}
 
 </SectionTitle>
@@ -385,7 +317,7 @@ The File object (not file name) to be uploaded.
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="none">
 
-### Responses \{#operation-files_api_routes_upload_file+responses\}
+### Response \{#operation-files_api_routes_upload_file+responses\}
 
 </SectionTitle>
 
@@ -553,40 +485,6 @@ Returns information about a specific file.
 
 <SectionTitle slot="title" borderVariant="default" paddingVariant="default">
 
-### Security \{#operation-files_api_routes_retrieve_file+security\}
-
-</SectionTitle>
-
-<SectionContent slot="content" borderVariant="default" paddingVariant="default">
-
-<Section>
-
-<SectionTitle slot="title" borderVariant="none" paddingVariant="default">
-
-#### Properties \{#operation-files_api_routes_retrieve_file+security+properties\}
-
-</SectionTitle>
-
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
-
-<Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":[]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
-
-##### ApiKey \{#operation-files_api_routes_retrieve_file+security+ApiKey\}
-
-</Property>
-
-</SectionContent>
-
-</Section>
-
-</SectionContent>
-
-</Section>
-
-<Section>
-
-<SectionTitle slot="title" borderVariant="default" paddingVariant="default">
-
 ### Parameters \{#operation-files_api_routes_retrieve_file+parameters\}
 
 </SectionTitle>
@@ -623,7 +521,7 @@ Returns information about a specific file.
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="none">
 
-### Responses \{#operation-files_api_routes_retrieve_file+responses\}
+### Response \{#operation-files_api_routes_retrieve_file+responses\}
 
 </SectionTitle>
 
@@ -801,40 +699,6 @@ Delete a file.
 
 <SectionTitle slot="title" borderVariant="default" paddingVariant="default">
 
-### Security \{#operation-files_api_routes_delete_file+security\}
-
-</SectionTitle>
-
-<SectionContent slot="content" borderVariant="default" paddingVariant="default">
-
-<Section>
-
-<SectionTitle slot="title" borderVariant="none" paddingVariant="default">
-
-#### Properties \{#operation-files_api_routes_delete_file+security+properties\}
-
-</SectionTitle>
-
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
-
-<Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":[]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
-
-##### ApiKey \{#operation-files_api_routes_delete_file+security+ApiKey\}
-
-</Property>
-
-</SectionContent>
-
-</Section>
-
-</SectionContent>
-
-</Section>
-
-<Section>
-
-<SectionTitle slot="title" borderVariant="default" paddingVariant="default">
-
 ### Parameters \{#operation-files_api_routes_delete_file+parameters\}
 
 </SectionTitle>
@@ -871,7 +735,7 @@ Delete a file.
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="none">
 
-### Responses \{#operation-files_api_routes_delete_file+responses\}
+### Response \{#operation-files_api_routes_delete_file+responses\}
 
 </SectionTitle>
 
@@ -963,40 +827,6 @@ Download a file
 
 <SectionTitle slot="title" borderVariant="default" paddingVariant="default">
 
-### Security \{#operation-files_api_routes_download_file+security\}
-
-</SectionTitle>
-
-<SectionContent slot="content" borderVariant="default" paddingVariant="default">
-
-<Section>
-
-<SectionTitle slot="title" borderVariant="none" paddingVariant="default">
-
-#### Properties \{#operation-files_api_routes_download_file+security+properties\}
-
-</SectionTitle>
-
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
-
-<Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":[]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
-
-##### ApiKey \{#operation-files_api_routes_download_file+security+ApiKey\}
-
-</Property>
-
-</SectionContent>
-
-</Section>
-
-</SectionContent>
-
-</Section>
-
-<Section>
-
-<SectionTitle slot="title" borderVariant="default" paddingVariant="default">
-
 ### Parameters \{#operation-files_api_routes_download_file+parameters\}
 
 </SectionTitle>
@@ -1033,7 +863,7 @@ Download a file
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="none">
 
-### Responses \{#operation-files_api_routes_download_file+responses\}
+### Response \{#operation-files_api_routes_download_file+responses\}
 
 </SectionTitle>
 
@@ -1076,40 +906,6 @@ OK
 ## <Pill variant="primary"><b>GET</b></Pill> /v1/files/\{file\_id\}/url \{#operation-files_api_routes_get_signed_url\}
 
 Get Signed Url
-
-<Section>
-
-<SectionTitle slot="title" borderVariant="default" paddingVariant="default">
-
-### Security \{#operation-files_api_routes_get_signed_url+security\}
-
-</SectionTitle>
-
-<SectionContent slot="content" borderVariant="default" paddingVariant="default">
-
-<Section>
-
-<SectionTitle slot="title" borderVariant="none" paddingVariant="default">
-
-#### Properties \{#operation-files_api_routes_get_signed_url+security+properties\}
-
-</SectionTitle>
-
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
-
-<Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":[]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
-
-##### ApiKey \{#operation-files_api_routes_get_signed_url+security+ApiKey\}
-
-</Property>
-
-</SectionContent>
-
-</Section>
-
-</SectionContent>
-
-</Section>
 
 <Section>
 
@@ -1181,7 +977,7 @@ Number of hours before the url becomes invalid. Defaults to 24h
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="none">
 
-### Responses \{#operation-files_api_routes_get_signed_url+responses\}
+### Response \{#operation-files_api_routes_get_signed_url+responses\}
 
 </SectionTitle>
 
