--- a/examples/nextra/mistral/src/app/api/tag/batch/jobs/page.mdx
+++ b/examples/nextra/mistral/src/app/api/tag/batch/jobs/page.mdx
@@ -2,8 +2,8 @@
 sidebarTitle: Batch Jobs
 ---
 
-import { Pill, Section, SectionTitle, SectionContent, Property, TabbedSection, SectionTab, ExpandableSection } from "@speakeasy-api/docs-md/nextra";
 import "@speakeasy-api/docs-md/nextra.css";
+import { Pill, TabbedSection, SectionTitle, SectionTab, SectionContent, Section, Property, ExpandableSection } from "@speakeasy-api/docs-md/nextra";
 
 
 # Batch Jobs Operations [#batch/jobs]
@@ -14,45 +14,11 @@ _Get Batch Jobs_
 
 Get a list of batch jobs for your organization and user.
 
-<Section>
-
-<SectionTitle slot="title" borderVariant="default" paddingVariant="default">
-
-### Security [#operation-jobs_api_routes_batch_get_batch_jobs+security]
-
-</SectionTitle>
-
-<SectionContent slot="content" borderVariant="default" paddingVariant="default">
-
-<Section>
-
-<SectionTitle slot="title" borderVariant="none" paddingVariant="default">
-
-#### Properties [#operation-jobs_api_routes_batch_get_batch_jobs+security+properties]
-
-</SectionTitle>
-
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
-
-<Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":[]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
-
-##### ApiKey [#operation-jobs_api_routes_batch_get_batch_jobs+security+ApiKey]
-
-</Property>
-
-</SectionContent>
-
-</Section>
-
-</SectionContent>
-
-</Section>
-
 <TabbedSection>
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="none">
 
-### Responses [#operation-jobs_api_routes_batch_get_batch_jobs+responses]
+### Response [#operation-jobs_api_routes_batch_get_batch_jobs+responses]
 
 </SectionTitle>
 
@@ -328,40 +294,6 @@ Create a new batch job, it will be queued for processing.
 
 <SectionTitle slot="title" borderVariant="default" paddingVariant="default">
 
-### Security [#operation-jobs_api_routes_batch_create_batch_job+security]
-
-</SectionTitle>
-
-<SectionContent slot="content" borderVariant="default" paddingVariant="default">
-
-<Section>
-
-<SectionTitle slot="title" borderVariant="none" paddingVariant="default">
-
-#### Properties [#operation-jobs_api_routes_batch_create_batch_job+security+properties]
-
-</SectionTitle>
-
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
-
-<Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":[]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
-
-##### ApiKey [#operation-jobs_api_routes_batch_create_batch_job+security+ApiKey]
-
-</Property>
-
-</SectionContent>
-
-</Section>
-
-</SectionContent>
-
-</Section>
-
-<Section>
-
-<SectionTitle slot="title" borderVariant="default" paddingVariant="default">
-
 ### Request Body [#operation-jobs_api_routes_batch_create_batch_job+request]
 
 </SectionTitle>
@@ -438,7 +370,7 @@ _Default Value:_ `24`
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="none">
 
-### Responses [#operation-jobs_api_routes_batch_create_batch_job+responses]
+### Response [#operation-jobs_api_routes_batch_create_batch_job+responses]
 
 </SectionTitle>
 
@@ -676,40 +608,6 @@ Get a batch job details by its UUID.
 
 <SectionTitle slot="title" borderVariant="default" paddingVariant="default">
 
-### Security [#operation-jobs_api_routes_batch_get_batch_job+security]
-
-</SectionTitle>
-
-<SectionContent slot="content" borderVariant="default" paddingVariant="default">
-
-<Section>
-
-<SectionTitle slot="title" borderVariant="none" paddingVariant="default">
-
-#### Properties [#operation-jobs_api_routes_batch_get_batch_job+security+properties]
-
-</SectionTitle>
-
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
-
-<Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":[]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
-
-##### ApiKey [#operation-jobs_api_routes_batch_get_batch_job+security+ApiKey]
-
-</Property>
-
-</SectionContent>
-
-</Section>
-
-</SectionContent>
-
-</Section>
-
-<Section>
-
-<SectionTitle slot="title" borderVariant="default" paddingVariant="default">
-
 ### Parameters [#operation-jobs_api_routes_batch_get_batch_job+parameters]
 
 </SectionTitle>
@@ -746,7 +644,7 @@ Get a batch job details by its UUID.
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="none">
 
-### Responses [#operation-jobs_api_routes_batch_get_batch_job+responses]
+### Response [#operation-jobs_api_routes_batch_get_batch_job+responses]
 
 </SectionTitle>
 
@@ -984,40 +882,6 @@ Request the cancellation of a batch job.
 
 <SectionTitle slot="title" borderVariant="default" paddingVariant="default">
 
-### Security [#operation-jobs_api_routes_batch_cancel_batch_job+security]
-
-</SectionTitle>
-
-<SectionContent slot="content" borderVariant="default" paddingVariant="default">
-
-<Section>
-
-<SectionTitle slot="title" borderVariant="none" paddingVariant="default">
-
-#### Properties [#operation-jobs_api_routes_batch_cancel_batch_job+security+properties]
-
-</SectionTitle>
-
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
-
-<Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":[]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
-
-##### ApiKey [#operation-jobs_api_routes_batch_cancel_batch_job+security+ApiKey]
-
-</Property>
-
-</SectionContent>
-
-</Section>
-
-</SectionContent>
-
-</Section>
-
-<Section>
-
-<SectionTitle slot="title" borderVariant="default" paddingVariant="default">
-
 ### Parameters [#operation-jobs_api_routes_batch_cancel_batch_job+parameters]
 
 </SectionTitle>
@@ -1054,7 +918,7 @@ Request the cancellation of a batch job.
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="none">
 
-### Responses [#operation-jobs_api_routes_batch_cancel_batch_job+responses]
+### Response [#operation-jobs_api_routes_batch_cancel_batch_job+responses]
 
 </SectionTitle>
 
