--- a/examples/nextra/mistral/src/app/api/tag/beta/agents/page.mdx
+++ b/examples/nextra/mistral/src/app/api/tag/beta/agents/page.mdx
@@ -2,8 +2,8 @@
 sidebarTitle: Beta Agents
 ---
 
-import { Pill, Section, SectionTitle, SectionContent, Property, TabbedSection, SectionTab, ExpandableSection } from "@speakeasy-api/docs-md/nextra";
 import "@speakeasy-api/docs-md/nextra.css";
+import { Pill, Section, SectionTitle, SectionContent, Property, TabbedSection, SectionTab, ExpandableSection } from "@speakeasy-api/docs-md/nextra";
 
 
 # Beta Agents Operations [#beta/agents]
@@ -13,40 +13,6 @@ import "@speakeasy-api/docs-md/nextra.css";
 _List agent entities._
 
 Retrieve a list of agent entities sorted by creation time.
-
-<Section>
-
-<SectionTitle slot="title" borderVariant="default" paddingVariant="default">
-
-### Security [#operation-agents_api_v1_agents_list+security]
-
-</SectionTitle>
-
-<SectionContent slot="content" borderVariant="default" paddingVariant="default">
-
-<Section>
-
-<SectionTitle slot="title" borderVariant="none" paddingVariant="default">
-
-#### Properties [#operation-agents_api_v1_agents_list+security+properties]
-
-</SectionTitle>
-
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
-
-<Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":[]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
-
-##### ApiKey [#operation-agents_api_v1_agents_list+security+ApiKey]
-
-</Property>
-
-</SectionContent>
-
-</Section>
-
-</SectionContent>
-
-</Section>
 
 <Section>
 
@@ -114,7 +80,7 @@ Retrieve a list of agent entities sorted by creation time.
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="none">
 
-### Responses [#operation-agents_api_v1_agents_list+responses]
+### Response [#operation-agents_api_v1_agents_list+responses]
 
 </SectionTitle>
 
@@ -152,100 +118,6 @@ Successful Response
 
 </SectionContent>
 
-<SectionTab slot="tab" id="operation-agents_api_v1_agents_list+422+application-json">
-
-422
-
-</SectionTab>
-
-<SectionContent slot="content" borderVariant="default" paddingVariant="default" id="operation-agents_api_v1_agents_list+422+application-json">
-
-Validation Error
-
-<Section>
-
-<SectionTitle slot="title" borderVariant="none" paddingVariant="default">
-
-#### Properties [#operation-agents_api_v1_agents_list+422+application-json+properties]
-
-</SectionTitle>
-
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
-
-<Property typeInfo={{"label":"Security","linkedLabel":"<a href=\"#operation-agents_api_v1_agents_list+422+application-json+Security\">Security</a>","children":[],"breakoutSubTypes":[{"label":"Security","schema":{"type":"object","description":null,"examples":[],"properties":{"ApiKey":{"type":"string","description":null,"examples":[],"defaultValue":null}},"required":["ApiKey"],"name":"Security","defaultValue":null}}]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
-
-##### HttpMeta [#operation-agents_api_v1_agents_list+422+application-json+HttpMeta]
-
-</Property>
-
-<ExpandableSection title="Security" id="operation-agents_api_v1_agents_list+422+application-json+Security">
-
-#### Properties [#operation-agents_api_v1_agents_list+422+application-json+Security+properties]
-
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
-
-<Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":[]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
-
-##### ApiKey [#operation-agents_api_v1_agents_list+422+application-json+Security+ApiKey]
-
-</Property>
-
-</SectionContent>
-
-</ExpandableSection>
-
-</SectionContent>
-
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
-
-<Property typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-agents_api_v1_agents_list+422+application-json+ValidationError\">ValidationError</a>","children":[{"label":"ValidationError","linkedLabel":"<a href=\"#operation-agents_api_v1_agents_list+422+application-json+ValidationError\">ValidationError</a>","children":[],"breakoutSubTypes":[{"label":"ValidationError","schema":{"type":"object","description":null,"examples":[],"properties":{"loc":{"type":"chunk","chunkId":"$15"},"msg":{"type":"string","description":null,"examples":[],"defaultValue":null},"type":{"type":"string","description":null,"examples":[],"defaultValue":null}},"required":["loc","msg","type"],"name":"ValidationError","defaultValue":null}}]}],"breakoutSubTypes":[{"label":"ValidationError","schema":{"type":"object","description":null,"examples":[],"properties":{"loc":{"type":"chunk","chunkId":"$15"},"msg":{"type":"string","description":null,"examples":[],"defaultValue":null},"type":{"type":"string","description":null,"examples":[],"defaultValue":null}},"required":["loc","msg","type"],"name":"ValidationError","defaultValue":null}}]}} typeAnnotations={[]}>
-
-##### detail [#operation-agents_api_v1_agents_list+422+application-json+detail]
-
-</Property>
-
-<ExpandableSection title="ValidationError" id="operation-agents_api_v1_agents_list+422+application-json+ValidationError">
-
-#### Properties [#operation-agents_api_v1_agents_list+422+application-json+ValidationError+properties]
-
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
-
-<Property typeInfo={{"label":"array","linkedLabel":"union","children":[{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":[]},{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":[]}],"breakoutSubTypes":[]}],"breakoutSubTypes":[]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
-
-##### loc [#operation-agents_api_v1_agents_list+422+application-json+ValidationError+loc]
-
-</Property>
-
-</SectionContent>
-
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
-
-<Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":[]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
-
-##### msg [#operation-agents_api_v1_agents_list+422+application-json+ValidationError+msg]
-
-</Property>
-
-</SectionContent>
-
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
-
-<Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":[]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
-
-##### type [#operation-agents_api_v1_agents_list+422+application-json+ValidationError+type]
-
-</Property>
-
-</SectionContent>
-
-</ExpandableSection>
-
-</SectionContent>
-
-</Section>
-
-</SectionContent>
-
 </TabbedSection>
 
 ## <Pill variant="primary"><b>POST</b></Pill> /v1/agents [#operation-agents_api_v1_agents_create]
@@ -253,40 +125,6 @@ Validation Error
 _Create a agent that can be used within a conversation._
 
 Create a new agent giving it instructions, tools, description. The agent is then available to be used as a regular assistant in a conversation or as part of an agent pool from which it can be used.
-
-<Section>
-
-<SectionTitle slot="title" borderVariant="default" paddingVariant="default">
-
-### Security [#operation-agents_api_v1_agents_create+security]
-
-</SectionTitle>
-
-<SectionContent slot="content" borderVariant="default" paddingVariant="default">
-
-<Section>
-
-<SectionTitle slot="title" borderVariant="none" paddingVariant="default">
-
-#### Properties [#operation-agents_api_v1_agents_create+security+properties]
-
-</SectionTitle>
-
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
-
-<Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":[]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
-
-##### ApiKey [#operation-agents_api_v1_agents_create+security+ApiKey]
-
-</Property>
-
-</SectionContent>
-
-</Section>
-
-</SectionContent>
-
-</Section>
 
 <Section>
 
@@ -780,7 +618,7 @@ _Default Value:_ `"document_library"`
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="none">
 
-### Responses [#operation-agents_api_v1_agents_create+responses]
+### Response [#operation-agents_api_v1_agents_create+responses]
 
 </SectionTitle>
 
@@ -1322,100 +1160,6 @@ _Default Value:_ `"document_library"`
 
 </SectionContent>
 
-<SectionTab slot="tab" id="operation-agents_api_v1_agents_create+422+application-json">
-
-422
-
-</SectionTab>
-
-<SectionContent slot="content" borderVariant="default" paddingVariant="default" id="operation-agents_api_v1_agents_create+422+application-json">
-
-Validation Error
-
-<Section>
-
-<SectionTitle slot="title" borderVariant="none" paddingVariant="default">
-
-#### Properties [#operation-agents_api_v1_agents_create+422+application-json+properties]
-
-</SectionTitle>
-
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
-
-<Property typeInfo={{"label":"Security","linkedLabel":"<a href=\"#operation-agents_api_v1_agents_create+422+application-json+Security\">Security</a>","children":[],"breakoutSubTypes":[{"label":"Security","schema":{"type":"object","description":null,"examples":[],"properties":{"ApiKey":{"type":"string","description":null,"examples":[],"defaultValue":null}},"required":["ApiKey"],"name":"Security","defaultValue":null}}]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
-
-##### HttpMeta [#operation-agents_api_v1_agents_create+422+application-json+HttpMeta]
-
-</Property>
-
-<ExpandableSection title="Security" id="operation-agents_api_v1_agents_create+422+application-json+Security">
-
-#### Properties [#operation-agents_api_v1_agents_create+422+application-json+Security+properties]
-
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
-
-<Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":[]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
-
-##### ApiKey [#operation-agents_api_v1_agents_create+422+application-json+Security+ApiKey]
-
-</Property>
-
-</SectionContent>
-
-</ExpandableSection>
-
-</SectionContent>
-
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
-
-<Property typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-agents_api_v1_agents_create+422+application-json+ValidationError\">ValidationError</a>","children":[{"label":"ValidationError","linkedLabel":"<a href=\"#operation-agents_api_v1_agents_create+422+application-json+ValidationError\">ValidationError</a>","children":[],"breakoutSubTypes":[{"label":"ValidationError","schema":{"type":"object","description":null,"examples":[],"properties":{"loc":{"type":"chunk","chunkId":"$15"},"msg":{"type":"string","description":null,"examples":[],"defaultValue":null},"type":{"type":"string","description":null,"examples":[],"defaultValue":null}},"required":["loc","msg","type"],"name":"ValidationError","defaultValue":null}}]}],"breakoutSubTypes":[{"label":"ValidationError","schema":{"type":"object","description":null,"examples":[],"properties":{"loc":{"type":"chunk","chunkId":"$15"},"msg":{"type":"string","description":null,"examples":[],"defaultValue":null},"type":{"type":"string","description":null,"examples":[],"defaultValue":null}},"required":["loc","msg","type"],"name":"ValidationError","defaultValue":null}}]}} typeAnnotations={[]}>
-
-##### detail [#operation-agents_api_v1_agents_create+422+application-json+detail]
-
-</Property>
-
-<ExpandableSection title="ValidationError" id="operation-agents_api_v1_agents_create+422+application-json+ValidationError">
-
-#### Properties [#operation-agents_api_v1_agents_create+422+application-json+ValidationError+properties]
-
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
-
-<Property typeInfo={{"label":"array","linkedLabel":"union","children":[{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":[]},{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":[]}],"breakoutSubTypes":[]}],"breakoutSubTypes":[]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
-
-##### loc [#operation-agents_api_v1_agents_create+422+application-json+ValidationError+loc]
-
-</Property>
-
-</SectionContent>
-
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
-
-<Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":[]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
-
-##### msg [#operation-agents_api_v1_agents_create+422+application-json+ValidationError+msg]
-
-</Property>
-
-</SectionContent>
-
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
-
-<Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":[]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
-
-##### type [#operation-agents_api_v1_agents_create+422+application-json+ValidationError+type]
-
-</Property>
-
-</SectionContent>
-
-</ExpandableSection>
-
-</SectionContent>
-
-</Section>
-
-</SectionContent>
-
 </TabbedSection>
 
 ## <Pill variant="primary"><b>GET</b></Pill> /v1/agents/\{agent\_id\} [#operation-agents_api_v1_agents_get]
@@ -1423,40 +1167,6 @@ Validation Error
 _Retrieve an agent entity._
 
 Given an agent retrieve an agent entity with its attributes.
-
-<Section>
-
-<SectionTitle slot="title" borderVariant="default" paddingVariant="default">
-
-### Security [#operation-agents_api_v1_agents_get+security]
-
-</SectionTitle>
-
-<SectionContent slot="content" borderVariant="default" paddingVariant="default">
-
-<Section>
-
-<SectionTitle slot="title" borderVariant="none" paddingVariant="default">
-
-#### Properties [#operation-agents_api_v1_agents_get+security+properties]
-
-</SectionTitle>
-
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
-
-<Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":[]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
-
-##### ApiKey [#operation-agents_api_v1_agents_get+security+ApiKey]
-
-</Property>
-
-</SectionContent>
-
-</Section>
-
-</SectionContent>
-
-</Section>
 
 <Section>
 
@@ -1498,7 +1208,7 @@ Given an agent retrieve an agent entity with its attributes.
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="none">
 
-### Responses [#operation-agents_api_v1_agents_get+responses]
+### Response [#operation-agents_api_v1_agents_get+responses]
 
 </SectionTitle>
 
@@ -2040,100 +1750,6 @@ _Default Value:_ `"document_library"`
 
 </SectionContent>
 
-<SectionTab slot="tab" id="operation-agents_api_v1_agents_get+422+application-json">
-
-422
-
-</SectionTab>
-
-<SectionContent slot="content" borderVariant="default" paddingVariant="default" id="operation-agents_api_v1_agents_get+422+application-json">
-
-Validation Error
-
-<Section>
-
-<SectionTitle slot="title" borderVariant="none" paddingVariant="default">
-
-#### Properties [#operation-agents_api_v1_agents_get+422+application-json+properties]
-
-</SectionTitle>
-
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
-
-<Property typeInfo={{"label":"Security","linkedLabel":"<a href=\"#operation-agents_api_v1_agents_get+422+application-json+Security\">Security</a>","children":[],"breakoutSubTypes":[{"label":"Security","schema":{"type":"object","description":null,"examples":[],"properties":{"ApiKey":{"type":"string","description":null,"examples":[],"defaultValue":null}},"required":["ApiKey"],"name":"Security","defaultValue":null}}]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
-
-##### HttpMeta [#operation-agents_api_v1_agents_get+422+application-json+HttpMeta]
-
-</Property>
-
-<ExpandableSection title="Security" id="operation-agents_api_v1_agents_get+422+application-json+Security">
-
-#### Properties [#operation-agents_api_v1_agents_get+422+application-json+Security+properties]
-
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
-
-<Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":[]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
-
-##### ApiKey [#operation-agents_api_v1_agents_get+422+application-json+Security+ApiKey]
-
-</Property>
-
-</SectionContent>
-
-</ExpandableSection>
-
-</SectionContent>
-
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
-
-<Property typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-agents_api_v1_agents_get+422+application-json+ValidationError\">ValidationError</a>","children":[{"label":"ValidationError","linkedLabel":"<a href=\"#operation-agents_api_v1_agents_get+422+application-json+ValidationError\">ValidationError</a>","children":[],"breakoutSubTypes":[{"label":"ValidationError","schema":{"type":"object","description":null,"examples":[],"properties":{"loc":{"type":"chunk","chunkId":"$15"},"msg":{"type":"string","description":null,"examples":[],"defaultValue":null},"type":{"type":"string","description":null,"examples":[],"defaultValue":null}},"required":["loc","msg","type"],"name":"ValidationError","defaultValue":null}}]}],"breakoutSubTypes":[{"label":"ValidationError","schema":{"type":"object","description":null,"examples":[],"properties":{"loc":{"type":"chunk","chunkId":"$15"},"msg":{"type":"string","description":null,"examples":[],"defaultValue":null},"type":{"type":"string","description":null,"examples":[],"defaultValue":null}},"required":["loc","msg","type"],"name":"ValidationError","defaultValue":null}}]}} typeAnnotations={[]}>
-
-##### detail [#operation-agents_api_v1_agents_get+422+application-json+detail]
-
-</Property>
-
-<ExpandableSection title="ValidationError" id="operation-agents_api_v1_agents_get+422+application-json+ValidationError">
-
-#### Properties [#operation-agents_api_v1_agents_get+422+application-json+ValidationError+properties]
-
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
-
-<Property typeInfo={{"label":"array","linkedLabel":"union","children":[{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":[]},{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":[]}],"breakoutSubTypes":[]}],"breakoutSubTypes":[]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
-
-##### loc [#operation-agents_api_v1_agents_get+422+application-json+ValidationError+loc]
-
-</Property>
-
-</SectionContent>
-
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
-
-<Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":[]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
-
-##### msg [#operation-agents_api_v1_agents_get+422+application-json+ValidationError+msg]
-
-</Property>
-
-</SectionContent>
-
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
-
-<Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":[]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
-
-##### type [#operation-agents_api_v1_agents_get+422+application-json+ValidationError+type]
-
-</Property>
-
-</SectionContent>
-
-</ExpandableSection>
-
-</SectionContent>
-
-</Section>
-
-</SectionContent>
-
 </TabbedSection>
 
 ## <Pill variant="primary"><b>PATCH</b></Pill> /v1/agents/\{agent\_id\} [#operation-agents_api_v1_agents_update]
@@ -2141,40 +1757,6 @@ Validation Error
 _Update an agent entity._
 
 Update an agent attributes and create a new version.
-
-<Section>
-
-<SectionTitle slot="title" borderVariant="default" paddingVariant="default">
-
-### Security [#operation-agents_api_v1_agents_update+security]
-
-</SectionTitle>
-
-<SectionContent slot="content" borderVariant="default" paddingVariant="default">
-
-<Section>
-
-<SectionTitle slot="title" borderVariant="none" paddingVariant="default">
-
-#### Properties [#operation-agents_api_v1_agents_update+security+properties]
-
-</SectionTitle>
-
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
-
-<Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":[]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
-
-##### ApiKey [#operation-agents_api_v1_agents_update+security+ApiKey]
-
-</Property>
-
-</SectionContent>
-
-</Section>
-
-</SectionContent>
-
-</Section>
 
 <Section>
 
@@ -2704,7 +2286,7 @@ _Default Value:_ `"document_library"`
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="none">
 
-### Responses [#operation-agents_api_v1_agents_update+responses]
+### Response [#operation-agents_api_v1_agents_update+responses]
 
 </SectionTitle>
 
@@ -3246,100 +2828,6 @@ _Default Value:_ `"document_library"`
 
 </SectionContent>
 
-<SectionTab slot="tab" id="operation-agents_api_v1_agents_update+422+application-json">
-
-422
-
-</SectionTab>
-
-<SectionContent slot="content" borderVariant="default" paddingVariant="default" id="operation-agents_api_v1_agents_update+422+application-json">
-
-Validation Error
-
-<Section>
-
-<SectionTitle slot="title" borderVariant="none" paddingVariant="default">
-
-#### Properties [#operation-agents_api_v1_agents_update+422+application-json+properties]
-
-</SectionTitle>
-
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
-
-<Property typeInfo={{"label":"Security","linkedLabel":"<a href=\"#operation-agents_api_v1_agents_update+422+application-json+Security\">Security</a>","children":[],"breakoutSubTypes":[{"label":"Security","schema":{"type":"object","description":null,"examples":[],"properties":{"ApiKey":{"type":"string","description":null,"examples":[],"defaultValue":null}},"required":["ApiKey"],"name":"Security","defaultValue":null}}]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
-
-##### HttpMeta [#operation-agents_api_v1_agents_update+422+application-json+HttpMeta]
-
-</Property>
-
-<ExpandableSection title="Security" id="operation-agents_api_v1_agents_update+422+application-json+Security">
-
-#### Properties [#operation-agents_api_v1_agents_update+422+application-json+Security+properties]
-
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
-
-<Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":[]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
-
-##### ApiKey [#operation-agents_api_v1_agents_update+422+application-json+Security+ApiKey]
-
-</Property>
-
-</SectionContent>
-
-</ExpandableSection>
-
-</SectionContent>
-
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
-
-<Property typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-agents_api_v1_agents_update+422+application-json+ValidationError\">ValidationError</a>","children":[{"label":"ValidationError","linkedLabel":"<a href=\"#operation-agents_api_v1_agents_update+422+application-json+ValidationError\">ValidationError</a>","children":[],"breakoutSubTypes":[{"label":"ValidationError","schema":{"type":"object","description":null,"examples":[],"properties":{"loc":{"type":"chunk","chunkId":"$15"},"msg":{"type":"string","description":null,"examples":[],"defaultValue":null},"type":{"type":"string","description":null,"examples":[],"defaultValue":null}},"required":["loc","msg","type"],"name":"ValidationError","defaultValue":null}}]}],"breakoutSubTypes":[{"label":"ValidationError","schema":{"type":"object","description":null,"examples":[],"properties":{"loc":{"type":"chunk","chunkId":"$15"},"msg":{"type":"string","description":null,"examples":[],"defaultValue":null},"type":{"type":"string","description":null,"examples":[],"defaultValue":null}},"required":["loc","msg","type"],"name":"ValidationError","defaultValue":null}}]}} typeAnnotations={[]}>
-
-##### detail [#operation-agents_api_v1_agents_update+422+application-json+detail]
-
-</Property>
-
-<ExpandableSection title="ValidationError" id="operation-agents_api_v1_agents_update+422+application-json+ValidationError">
-
-#### Properties [#operation-agents_api_v1_agents_update+422+application-json+ValidationError+properties]
-
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
-
-<Property typeInfo={{"label":"array","linkedLabel":"union","children":[{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":[]},{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":[]}],"breakoutSubTypes":[]}],"breakoutSubTypes":[]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
-
-##### loc [#operation-agents_api_v1_agents_update+422+application-json+ValidationError+loc]
-
-</Property>
-
-</SectionContent>
-
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
-
-<Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":[]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
-
-##### msg [#operation-agents_api_v1_agents_update+422+application-json+ValidationError+msg]
-
-</Property>
-
-</SectionContent>
-
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
-
-<Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":[]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
-
-##### type [#operation-agents_api_v1_agents_update+422+application-json+ValidationError+type]
-
-</Property>
-
-</SectionContent>
-
-</ExpandableSection>
-
-</SectionContent>
-
-</Section>
-
-</SectionContent>
-
 </TabbedSection>
 
 ## <Pill variant="primary"><b>PATCH</b></Pill> /v1/agents/\{agent\_id\}/version [#operation-agents_api_v1_agents_update_version]
@@ -3347,40 +2835,6 @@ Validation Error
 _Update an agent version._
 
 Switch the version of an agent.
-
-<Section>
-
-<SectionTitle slot="title" borderVariant="default" paddingVariant="default">
-
-### Security [#operation-agents_api_v1_agents_update_version+security]
-
-</SectionTitle>
-
-<SectionContent slot="content" borderVariant="default" paddingVariant="default">
-
-<Section>
-
-<SectionTitle slot="title" borderVariant="none" paddingVariant="default">
-
-#### Properties [#operation-agents_api_v1_agents_update_version+security+properties]
-
-</SectionTitle>
-
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
-
-<Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":[]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
-
-##### ApiKey [#operation-agents_api_v1_agents_update_version+security+ApiKey]
-
-</Property>
-
-</SectionContent>
-
-</Section>
-
-</SectionContent>
-
-</Section>
 
 <Section>
 
@@ -3448,7 +2902,7 @@ Switch the version of an agent.
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="none">
 
-### Responses [#operation-agents_api_v1_agents_update_version+responses]
+### Response [#operation-agents_api_v1_agents_update_version+responses]
 
 </SectionTitle>
 
@@ -3983,100 +3437,6 @@ _Default Value:_ `"document_library"`
 ##### version [#operation-agents_api_v1_agents_update_version+200+application-json+version]
 
 </Property>
-
-</SectionContent>
-
-</Section>
-
-</SectionContent>
-
-<SectionTab slot="tab" id="operation-agents_api_v1_agents_update_version+422+application-json">
-
-422
-
-</SectionTab>
-
-<SectionContent slot="content" borderVariant="default" paddingVariant="default" id="operation-agents_api_v1_agents_update_version+422+application-json">
-
-Validation Error
-
-<Section>
-
-<SectionTitle slot="title" borderVariant="none" paddingVariant="default">
-
-#### Properties [#operation-agents_api_v1_agents_update_version+422+application-json+properties]
-
-</SectionTitle>
-
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
-
-<Property typeInfo={{"label":"Security","linkedLabel":"<a href=\"#operation-agents_api_v1_agents_update_version+422+application-json+Security\">Security</a>","children":[],"breakoutSubTypes":[{"label":"Security","schema":{"type":"object","description":null,"examples":[],"properties":{"ApiKey":{"type":"string","description":null,"examples":[],"defaultValue":null}},"required":["ApiKey"],"name":"Security","defaultValue":null}}]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
-
-##### HttpMeta [#operation-agents_api_v1_agents_update_version+422+application-json+HttpMeta]
-
-</Property>
-
-<ExpandableSection title="Security" id="operation-agents_api_v1_agents_update_version+422+application-json+Security">
-
-#### Properties [#operation-agents_api_v1_agents_update_version+422+application-json+Security+properties]
-
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
-
-<Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":[]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
-
-##### ApiKey [#operation-agents_api_v1_agents_update_version+422+application-json+Security+ApiKey]
-
-</Property>
-
-</SectionContent>
-
-</ExpandableSection>
-
-</SectionContent>
-
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
-
-<Property typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-agents_api_v1_agents_update_version+422+application-json+ValidationError\">ValidationError</a>","children":[{"label":"ValidationError","linkedLabel":"<a href=\"#operation-agents_api_v1_agents_update_version+422+application-json+ValidationError\">ValidationError</a>","children":[],"breakoutSubTypes":[{"label":"ValidationError","schema":{"type":"object","description":null,"examples":[],"properties":{"loc":{"type":"chunk","chunkId":"$15"},"msg":{"type":"string","description":null,"examples":[],"defaultValue":null},"type":{"type":"string","description":null,"examples":[],"defaultValue":null}},"required":["loc","msg","type"],"name":"ValidationError","defaultValue":null}}]}],"breakoutSubTypes":[{"label":"ValidationError","schema":{"type":"object","description":null,"examples":[],"properties":{"loc":{"type":"chunk","chunkId":"$15"},"msg":{"type":"string","description":null,"examples":[],"defaultValue":null},"type":{"type":"string","description":null,"examples":[],"defaultValue":null}},"required":["loc","msg","type"],"name":"ValidationError","defaultValue":null}}]}} typeAnnotations={[]}>
-
-##### detail [#operation-agents_api_v1_agents_update_version+422+application-json+detail]
-
-</Property>
-
-<ExpandableSection title="ValidationError" id="operation-agents_api_v1_agents_update_version+422+application-json+ValidationError">
-
-#### Properties [#operation-agents_api_v1_agents_update_version+422+application-json+ValidationError+properties]
-
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
-
-<Property typeInfo={{"label":"array","linkedLabel":"union","children":[{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":[]},{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":[]}],"breakoutSubTypes":[]}],"breakoutSubTypes":[]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
-
-##### loc [#operation-agents_api_v1_agents_update_version+422+application-json+ValidationError+loc]
-
-</Property>
-
-</SectionContent>
-
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
-
-<Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":[]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
-
-##### msg [#operation-agents_api_v1_agents_update_version+422+application-json+ValidationError+msg]
-
-</Property>
-
-</SectionContent>
-
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
-
-<Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":[]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
-
-##### type [#operation-agents_api_v1_agents_update_version+422+application-json+ValidationError+type]
-
-</Property>
-
-</SectionContent>
-
-</ExpandableSection>
 
 </SectionContent>
 
