--- a/examples/nextra/mistral/src/app/api/tag/chat/page.mdx
+++ b/examples/nextra/mistral/src/app/api/tag/chat/page.mdx
@@ -2,8 +2,8 @@
 sidebarTitle: Chat
 ---
 
-import { Pill, Section, SectionTitle, SectionContent, Property, ExpandableSection, TabbedSection, SectionTab } from "@speakeasy-api/docs-md/nextra";
 import "@speakeasy-api/docs-md/nextra.css";
+import { Pill, Section, SectionTitle, SectionContent, Property, ExpandableSection, TabbedSection, SectionTab } from "@speakeasy-api/docs-md/nextra";
 
 
 # Chat Operations [#chat]
@@ -11,40 +11,6 @@ import "@speakeasy-api/docs-md/nextra.css";
 ## <Pill variant="primary"><b>POST</b></Pill> /v1/chat/completions [#operation-chat_completion_v1_chat_completions_post]
 
 Chat Completion
-
-<Section>
-
-<SectionTitle slot="title" borderVariant="default" paddingVariant="default">
-
-### Security [#operation-chat_completion_v1_chat_completions_post+security]
-
-</SectionTitle>
-
-<SectionContent slot="content" borderVariant="default" paddingVariant="default">
-
-<Section>
-
-<SectionTitle slot="title" borderVariant="none" paddingVariant="default">
-
-#### Properties [#operation-chat_completion_v1_chat_completions_post+security+properties]
-
-</SectionTitle>
-
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
-
-<Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":[]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
-
-##### ApiKey [#operation-chat_completion_v1_chat_completions_post+security+ApiKey]
-
-</Property>
-
-</SectionContent>
-
-</Section>
-
-</SectionContent>
-
-</Section>
 
 <Section>
 
@@ -1212,7 +1178,7 @@ Nucleus sampling, where the model considers the results of the tokens with `top_
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="none">
 
-### Responses [#operation-chat_completion_v1_chat_completions_post+responses]
+### Response [#operation-chat_completion_v1_chat_completions_post+responses]
 
 </SectionTitle>
 
@@ -1691,100 +1657,6 @@ _Example:_
 ```
 50
 ```
-
-</SectionContent>
-
-</ExpandableSection>
-
-</SectionContent>
-
-</Section>
-
-</SectionContent>
-
-<SectionTab slot="tab" id="operation-chat_completion_v1_chat_completions_post+422+application-json">
-
-422
-
-</SectionTab>
-
-<SectionContent slot="content" borderVariant="default" paddingVariant="default" id="operation-chat_completion_v1_chat_completions_post+422+application-json">
-
-Validation Error
-
-<Section>
-
-<SectionTitle slot="title" borderVariant="none" paddingVariant="default">
-
-#### Properties [#operation-chat_completion_v1_chat_completions_post+422+application-json+properties]
-
-</SectionTitle>
-
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
-
-<Property typeInfo={{"label":"Security","linkedLabel":"<a href=\"#operation-chat_completion_v1_chat_completions_post+422+application-json+Security\">Security</a>","children":[],"breakoutSubTypes":[{"label":"Security","schema":{"type":"object","description":null,"examples":[],"properties":{"ApiKey":{"type":"string","description":null,"examples":[],"defaultValue":null}},"required":["ApiKey"],"name":"Security","defaultValue":null}}]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
-
-##### HttpMeta [#operation-chat_completion_v1_chat_completions_post+422+application-json+HttpMeta]
-
-</Property>
-
-<ExpandableSection title="Security" id="operation-chat_completion_v1_chat_completions_post+422+application-json+Security">
-
-#### Properties [#operation-chat_completion_v1_chat_completions_post+422+application-json+Security+properties]
-
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
-
-<Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":[]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
-
-##### ApiKey [#operation-chat_completion_v1_chat_completions_post+422+application-json+Security+ApiKey]
-
-</Property>
-
-</SectionContent>
-
-</ExpandableSection>
-
-</SectionContent>
-
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
-
-<Property typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-chat_completion_v1_chat_completions_post+422+application-json+ValidationError\">ValidationError</a>","children":[{"label":"ValidationError","linkedLabel":"<a href=\"#operation-chat_completion_v1_chat_completions_post+422+application-json+ValidationError\">ValidationError</a>","children":[],"breakoutSubTypes":[{"label":"ValidationError","schema":{"type":"object","description":null,"examples":[],"properties":{"loc":{"type":"chunk","chunkId":"$15"},"msg":{"type":"string","description":null,"examples":[],"defaultValue":null},"type":{"type":"string","description":null,"examples":[],"defaultValue":null}},"required":["loc","msg","type"],"name":"ValidationError","defaultValue":null}}]}],"breakoutSubTypes":[{"label":"ValidationError","schema":{"type":"object","description":null,"examples":[],"properties":{"loc":{"type":"chunk","chunkId":"$15"},"msg":{"type":"string","description":null,"examples":[],"defaultValue":null},"type":{"type":"string","description":null,"examples":[],"defaultValue":null}},"required":["loc","msg","type"],"name":"ValidationError","defaultValue":null}}]}} typeAnnotations={[]}>
-
-##### detail [#operation-chat_completion_v1_chat_completions_post+422+application-json+detail]
-
-</Property>
-
-<ExpandableSection title="ValidationError" id="operation-chat_completion_v1_chat_completions_post+422+application-json+ValidationError">
-
-#### Properties [#operation-chat_completion_v1_chat_completions_post+422+application-json+ValidationError+properties]
-
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
-
-<Property typeInfo={{"label":"array","linkedLabel":"union","children":[{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":[]},{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":[]}],"breakoutSubTypes":[]}],"breakoutSubTypes":[]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
-
-##### loc [#operation-chat_completion_v1_chat_completions_post+422+application-json+ValidationError+loc]
-
-</Property>
-
-</SectionContent>
-
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
-
-<Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":[]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
-
-##### msg [#operation-chat_completion_v1_chat_completions_post+422+application-json+ValidationError+msg]
-
-</Property>
-
-</SectionContent>
-
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
-
-<Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":[]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
-
-##### type [#operation-chat_completion_v1_chat_completions_post+422+application-json+ValidationError+type]
-
-</Property>
 
 </SectionContent>
 
