--- a/examples/nextra/mistral/src/app/api/tag/files/page.mdx
+++ b/examples/nextra/mistral/src/app/api/tag/files/page.mdx
@@ -2,8 +2,8 @@
 sidebarTitle: Files
 ---
 
-import { Pill, Section, SectionTitle, SectionContent, Property, TabbedSection, SectionTab, ExpandableSection } from "@speakeasy-api/docs-md/nextra";
 import "@speakeasy-api/docs-md/nextra.css";
+import { Pill, TabbedSection, SectionTitle, SectionTab, SectionContent, Section, Property, ExpandableSection } from "@speakeasy-api/docs-md/nextra";
 
 
 # Files Operations [#files]
@@ -14,45 +14,11 @@ _List Files_
 
 Returns a list of files that belong to the user's organization.
 
-<Section>
-
-<SectionTitle slot="title" borderVariant="default" paddingVariant="default">
-
-### Security [#operation-files_api_routes_list_files+security]
-
-</SectionTitle>
-
-<SectionContent slot="content" borderVariant="default" paddingVariant="default">
-
-<Section>
-
-<SectionTitle slot="title" borderVariant="none" paddingVariant="default">
-
-#### Properties [#operation-files_api_routes_list_files+security+properties]
-
-</SectionTitle>
-
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
-
-<Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":[]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
-
-##### ApiKey [#operation-files_api_routes_list_files+security+ApiKey]
-
-</Property>
-
-</SectionContent>
-
-</Section>
-
-</SectionContent>
-
-</Section>
-
 <TabbedSection>
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="none">
 
-### Responses [#operation-files_api_routes_list_files+responses]
+### Response [#operation-files_api_routes_list_files+responses]
 
 </SectionTitle>
 
@@ -260,40 +226,6 @@ Please contact us if you need to increase these storage limits.
 
 <SectionTitle slot="title" borderVariant="default" paddingVariant="default">
 
-### Security [#operation-files_api_routes_upload_file+security]
-
-</SectionTitle>
-
-<SectionContent slot="content" borderVariant="default" paddingVariant="default">
-
-<Section>
-
-<SectionTitle slot="title" borderVariant="none" paddingVariant="default">
-
-#### Properties [#operation-files_api_routes_upload_file+security+properties]
-
-</SectionTitle>
-
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
-
-<Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":[]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
-
-##### ApiKey [#operation-files_api_routes_upload_file+security+ApiKey]
-
-</Property>
-
-</SectionContent>
-
-</Section>
-
-</SectionContent>
-
-</Section>
-
-<Section>
-
-<SectionTitle slot="title" borderVariant="default" paddingVariant="default">
-
 ### Request Body [#operation-files_api_routes_upload_file+request]
 
 </SectionTitle>
@@ -384,7 +316,7 @@ The File object (not file name) to be uploaded.
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="none">
 
-### Responses [#operation-files_api_routes_upload_file+responses]
+### Response [#operation-files_api_routes_upload_file+responses]
 
 </SectionTitle>
 
@@ -552,40 +484,6 @@ Returns information about a specific file.
 
 <SectionTitle slot="title" borderVariant="default" paddingVariant="default">
 
-### Security [#operation-files_api_routes_retrieve_file+security]
-
-</SectionTitle>
-
-<SectionContent slot="content" borderVariant="default" paddingVariant="default">
-
-<Section>
-
-<SectionTitle slot="title" borderVariant="none" paddingVariant="default">
-
-#### Properties [#operation-files_api_routes_retrieve_file+security+properties]
-
-</SectionTitle>
-
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
-
-<Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":[]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
-
-##### ApiKey [#operation-files_api_routes_retrieve_file+security+ApiKey]
-
-</Property>
-
-</SectionContent>
-
-</Section>
-
-</SectionContent>
-
-</Section>
-
-<Section>
-
-<SectionTitle slot="title" borderVariant="default" paddingVariant="default">
-
 ### Parameters [#operation-files_api_routes_retrieve_file+parameters]
 
 </SectionTitle>
@@ -622,7 +520,7 @@ Returns information about a specific file.
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="none">
 
-### Responses [#operation-files_api_routes_retrieve_file+responses]
+### Response [#operation-files_api_routes_retrieve_file+responses]
 
 </SectionTitle>
 
@@ -800,40 +698,6 @@ Delete a file.
 
 <SectionTitle slot="title" borderVariant="default" paddingVariant="default">
 
-### Security [#operation-files_api_routes_delete_file+security]
-
-</SectionTitle>
-
-<SectionContent slot="content" borderVariant="default" paddingVariant="default">
-
-<Section>
-
-<SectionTitle slot="title" borderVariant="none" paddingVariant="default">
-
-#### Properties [#operation-files_api_routes_delete_file+security+properties]
-
-</SectionTitle>
-
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
-
-<Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":[]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
-
-##### ApiKey [#operation-files_api_routes_delete_file+security+ApiKey]
-
-</Property>
-
-</SectionContent>
-
-</Section>
-
-</SectionContent>
-
-</Section>
-
-<Section>
-
-<SectionTitle slot="title" borderVariant="default" paddingVariant="default">
-
 ### Parameters [#operation-files_api_routes_delete_file+parameters]
 
 </SectionTitle>
@@ -870,7 +734,7 @@ Delete a file.
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="none">
 
-### Responses [#operation-files_api_routes_delete_file+responses]
+### Response [#operation-files_api_routes_delete_file+responses]
 
 </SectionTitle>
 
@@ -962,40 +826,6 @@ Download a file
 
 <SectionTitle slot="title" borderVariant="default" paddingVariant="default">
 
-### Security [#operation-files_api_routes_download_file+security]
-
-</SectionTitle>
-
-<SectionContent slot="content" borderVariant="default" paddingVariant="default">
-
-<Section>
-
-<SectionTitle slot="title" borderVariant="none" paddingVariant="default">
-
-#### Properties [#operation-files_api_routes_download_file+security+properties]
-
-</SectionTitle>
-
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
-
-<Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":[]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
-
-##### ApiKey [#operation-files_api_routes_download_file+security+ApiKey]
-
-</Property>
-
-</SectionContent>
-
-</Section>
-
-</SectionContent>
-
-</Section>
-
-<Section>
-
-<SectionTitle slot="title" borderVariant="default" paddingVariant="default">
-
 ### Parameters [#operation-files_api_routes_download_file+parameters]
 
 </SectionTitle>
@@ -1032,7 +862,7 @@ Download a file
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="none">
 
-### Responses [#operation-files_api_routes_download_file+responses]
+### Response [#operation-files_api_routes_download_file+responses]
 
 </SectionTitle>
 
@@ -1075,40 +905,6 @@ OK
 ## <Pill variant="primary"><b>GET</b></Pill> /v1/files/\{file\_id\}/url [#operation-files_api_routes_get_signed_url]
 
 Get Signed Url
-
-<Section>
-
-<SectionTitle slot="title" borderVariant="default" paddingVariant="default">
-
-### Security [#operation-files_api_routes_get_signed_url+security]
-
-</SectionTitle>
-
-<SectionContent slot="content" borderVariant="default" paddingVariant="default">
-
-<Section>
-
-<SectionTitle slot="title" borderVariant="none" paddingVariant="default">
-
-#### Properties [#operation-files_api_routes_get_signed_url+security+properties]
-
-</SectionTitle>
-
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
-
-<Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":[]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
-
-##### ApiKey [#operation-files_api_routes_get_signed_url+security+ApiKey]
-
-</Property>
-
-</SectionContent>
-
-</Section>
-
-</SectionContent>
-
-</Section>
 
 <Section>
 
@@ -1180,7 +976,7 @@ Number of hours before the url becomes invalid. Defaults to 24h
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="none">
 
-### Responses [#operation-files_api_routes_get_signed_url+responses]
+### Response [#operation-files_api_routes_get_signed_url+responses]
 
 </SectionTitle>
 
