--- a/examples/nextra/mistral/src/app/api/tag/fim/page.mdx
+++ b/examples/nextra/mistral/src/app/api/tag/fim/page.mdx
@@ -2,8 +2,8 @@
 sidebarTitle: Fim
 ---
 
-import { Pill, Section, SectionTitle, SectionContent, Property, TabbedSection, SectionTab, ExpandableSection } from "@speakeasy-api/docs-md/nextra";
 import "@speakeasy-api/docs-md/nextra.css";
+import { Pill, Section, SectionTitle, SectionContent, Property, TabbedSection, SectionTab, ExpandableSection } from "@speakeasy-api/docs-md/nextra";
 
 
 # Fim Operations [#fim]
@@ -13,40 +13,6 @@ import "@speakeasy-api/docs-md/nextra.css";
 _Fim Completion_
 
 FIM completion.
-
-<Section>
-
-<SectionTitle slot="title" borderVariant="default" paddingVariant="default">
-
-### Security [#operation-fim_completion_v1_fim_completions_post+security]
-
-</SectionTitle>
-
-<SectionContent slot="content" borderVariant="default" paddingVariant="default">
-
-<Section>
-
-<SectionTitle slot="title" borderVariant="none" paddingVariant="default">
-
-#### Properties [#operation-fim_completion_v1_fim_completions_post+security+properties]
-
-</SectionTitle>
-
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
-
-<Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":[]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
-
-##### ApiKey [#operation-fim_completion_v1_fim_completions_post+security+ApiKey]
-
-</Property>
-
-</SectionContent>
-
-</Section>
-
-</SectionContent>
-
-</Section>
 
 <Section>
 
@@ -210,7 +176,7 @@ _Default Value:_ `1`
 
 <SectionTitle slot="title" borderVariant="none" paddingVariant="none">
 
-### Responses [#operation-fim_completion_v1_fim_completions_post+responses]
+### Response [#operation-fim_completion_v1_fim_completions_post+responses]
 
 </SectionTitle>
 
@@ -689,100 +655,6 @@ _Example:_
 ```
 50
 ```
-
-</SectionContent>
-
-</ExpandableSection>
-
-</SectionContent>
-
-</Section>
-
-</SectionContent>
-
-<SectionTab slot="tab" id="operation-fim_completion_v1_fim_completions_post+422+application-json">
-
-422
-
-</SectionTab>
-
-<SectionContent slot="content" borderVariant="default" paddingVariant="default" id="operation-fim_completion_v1_fim_completions_post+422+application-json">
-
-Validation Error
-
-<Section>
-
-<SectionTitle slot="title" borderVariant="none" paddingVariant="default">
-
-#### Properties [#operation-fim_completion_v1_fim_completions_post+422+application-json+properties]
-
-</SectionTitle>
-
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
-
-<Property typeInfo={{"label":"Security","linkedLabel":"<a href=\"#operation-fim_completion_v1_fim_completions_post+422+application-json+Security\">Security</a>","children":[],"breakoutSubTypes":[{"label":"Security","schema":{"type":"object","description":null,"examples":[],"properties":{"ApiKey":{"type":"string","description":null,"examples":[],"defaultValue":null}},"required":["ApiKey"],"name":"Security","defaultValue":null}}]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
-
-##### HttpMeta [#operation-fim_completion_v1_fim_completions_post+422+application-json+HttpMeta]
-
-</Property>
-
-<ExpandableSection title="Security" id="operation-fim_completion_v1_fim_completions_post+422+application-json+Security">
-
-#### Properties [#operation-fim_completion_v1_fim_completions_post+422+application-json+Security+properties]
-
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
-
-<Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":[]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
-
-##### ApiKey [#operation-fim_completion_v1_fim_completions_post+422+application-json+Security+ApiKey]
-
-</Property>
-
-</SectionContent>
-
-</ExpandableSection>
-
-</SectionContent>
-
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
-
-<Property typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-fim_completion_v1_fim_completions_post+422+application-json+ValidationError\">ValidationError</a>","children":[{"label":"ValidationError","linkedLabel":"<a href=\"#operation-fim_completion_v1_fim_completions_post+422+application-json+ValidationError\">ValidationError</a>","children":[],"breakoutSubTypes":[{"label":"ValidationError","schema":{"type":"object","description":null,"examples":[],"properties":{"loc":{"type":"chunk","chunkId":"$15"},"msg":{"type":"string","description":null,"examples":[],"defaultValue":null},"type":{"type":"string","description":null,"examples":[],"defaultValue":null}},"required":["loc","msg","type"],"name":"ValidationError","defaultValue":null}}]}],"breakoutSubTypes":[{"label":"ValidationError","schema":{"type":"object","description":null,"examples":[],"properties":{"loc":{"type":"chunk","chunkId":"$15"},"msg":{"type":"string","description":null,"examples":[],"defaultValue":null},"type":{"type":"string","description":null,"examples":[],"defaultValue":null}},"required":["loc","msg","type"],"name":"ValidationError","defaultValue":null}}]}} typeAnnotations={[]}>
-
-##### detail [#operation-fim_completion_v1_fim_completions_post+422+application-json+detail]
-
-</Property>
-
-<ExpandableSection title="ValidationError" id="operation-fim_completion_v1_fim_completions_post+422+application-json+ValidationError">
-
-#### Properties [#operation-fim_completion_v1_fim_completions_post+422+application-json+ValidationError+properties]
-
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
-
-<Property typeInfo={{"label":"array","linkedLabel":"union","children":[{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":[]},{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":[]}],"breakoutSubTypes":[]}],"breakoutSubTypes":[]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
-
-##### loc [#operation-fim_completion_v1_fim_completions_post+422+application-json+ValidationError+loc]
-
-</Property>
-
-</SectionContent>
-
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
-
-<Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":[]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
-
-##### msg [#operation-fim_completion_v1_fim_completions_post+422+application-json+ValidationError+msg]
-
-</Property>
-
-</SectionContent>
-
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
-
-<Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":[]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
-
-##### type [#operation-fim_completion_v1_fim_completions_post+422+application-json+ValidationError+type]
-
-</Property>
 
 </SectionContent>
 
